<resources>
    <string name="app_name">Bash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="log_in_with_phone_number">Log In with phone number</string>
    <string name="otp_code">OTP Code</string>
    <string name="enter_otp_text">Please enter the four digits code \nthat was sent to you phone number below</string>
    <string name="re_send_otp">Re-send OTP</string>
    <string name="continue_">CONTINUE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_here">Search here</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="service">My Services</string>
    <string name="home">Home</string>
    <string name="pay">Pay</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="renewing_visa">Renewing Visa</string>
    <string name="vat">VAT</string>
    <string name="total">Total</string>
    <string name="type_your_coupen">Type your coupon</string>
    <string name="details">Details</string>
    <string name="requirements">Requirements</string>
    <string name="governmental_nfees">Governmental \nfees</string>
    <string name="ask_us_about_it">Ask Us About it</string>
    <string name="buy_the_service">Buy the Service</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="new_account">New Account</string>
    <string name="enter_your_information_below">Enter your information below</string>
    <string name="occupation">Occupation</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="create">CREATE</string>
    <string name="notes">Notes</string>
    <string name="send">SEND</string>
    <string name="save">SAVE</string>
    <string name="all_the_governmental_services_in_one_place">All the Governmental Services in One Place</string>
    <string name="here_you_see_all_your_services">Here You See All Your Services</string>
    <string name="profile">PROFILE</string>
    <string name="invoices">INVOICES</string>
    <string name="see_all_invoices">See All Your Invoices</string>
    <string name="common_nquestions">FAQ</string>
    <string name="about_us">ABOUT US</string>
    <string name="aboutus">About Us</string>
    <string name="contact_us">CONTACT US</string>
    <string name="contactus">Contact Us</string>
    <string name="common_ques">Common Questions</string>
    <string name="invite_a_friend">INVITE A FRIEND</string>
    <string name="log_out">LOG OUT</string>
    <string name="what_people_are_saying_about_it">What People Are Saying About it.</string>
    <string name="send_us_your_concerns">Send Us Your Concerns</string>
    <string name="code_verified">CODE VERIFIED</string>
    <string name="please_wait">Please Wait</string>
    <string name="payment_successfully">PAYMENT SUCCESSFULLY</string>
    <string name="payment_hold">PAYMENT IS ON HOLD</string>
    <string name="wait_untill_the_payment_go_through_ndon_t_close_the_app">WAIT UNTILL THE PAYMENT GO THROUGH \nDON\'T CLOSE THE APP</string>
    <string name="check_your_order">CHECK YOUR ORDER</string>
    <string name="payment_have_been_through_successfully">Payment Have Been Through Successfully</string>
    <string name="payment_have_notify">You Will Get Notified When The Accountant \nAuthorize Your Payment</string>
    <string name="payment_checkorder">YOU WILL BE ABLE TO CHECK YOUR ORDER \nWHEN THE PAYMENT IS SUCCESS</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_cancel_the_order">Are you sure you want to cancel the Order?</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the App?</string>
    <string name="report">Report</string>
    <string name="tell_us_what_wrong">Tell us what wrong?</string>
    <string name="how_was_your_experience_with_app">How was your experience with App?</string>
    <string name="live_chat">Live Chat</string>
    <string name="ask_away">Ask Away</string>
    <string name="facebook_app_id">297130444835579</string>
<!--    <string name="facebook_app_id">636205650311428</string>-->
    <string name="fb_login_protocol_scheme">fb297800690726297</string>
    <string name="skip">Skip</string>
    <string name="continue_payment">Continue Payment</string>
    <string name="choose_payment">Choose your payment method</string>
    <string name="pay_mada">Pay with MADA</string>
    <string name="pay_mastercard">Pay with Mastercard </string>
    <string name="pay_visa">Pay with VISA</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="name_caps">NAME</string>
    <string name="end_date">END DATE</string>
    <string name="cvv">cvv</string>
    <string name="view_order">View Order</string>
    <string name="see_order_step">See Your Order Steps</string>
    <string name="order_cancel">Your Order Has Been Cancelled</string>
    <string name="done">Done</string>
    <string name="processing">Processing</string>
    <string name="received">Received</string>
    <string name="enter_card_number">Enter Card number</string>
    <string name="select_card">Select Card </string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_cvv">Enter Cvv Number</string>
    <string name="enter_report">Enter Message</string>
    <string name="cart_empty">Your Cart is Empty</string>
    <string name="no_service">No Service</string>
    <string name="log_in_with_facebook">Log In with Facebook</string>
    <string name="you_want_to_clear_cart">Are you sure you want to clear Cart?</string>
    <string name="cancel">Cancel</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="ok">Ok</string>
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="musared">Musared</string>
    <string name="work_days">Word Days</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="type_your_message">Type your message…</string>
    <string name="immigration">Immigration</string>
    <string name="change_immigration_status">Change immigration status</string>
    <string name="download_receipt">View Receipt</string>
    <string name="invoice_no">Invoice No.</string>
    <string name="total_of">Total Of</string>
    <string name="paid">PAID</string>
    <string name="refund">REFUND</string>
    <string name="payment_method">Payment Method</string>
    <string name="save_the_card">Save the card</string>
    <string name="street">STREET</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="country_code">COUNTRY CODE</string>
    <string name="post_code">POST CODE</string>
</resources>