<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/_16sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cairo_bold700"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/cairo_regular400"
                android:gravity="center"
                android:text="@string/are_you_sure_you_want_to_exit_the_app"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_14sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnYes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="1"
                    android:background="@color/colorRed"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/cairo_semibold600"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />

                <Button
                    android:id="@+id/btnNo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="1"
                    android:background="@color/colorBlue"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/cairo_semibold600"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>