<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ndroid="http://schemas.android.com/tools"
    android:padding="@dimen/_16sdp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top|center">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/cancel_order"
                android:textSize="@dimen/_18sdp"
                android:fontFamily="@font/cairo_bold700"
                android:textColor="@color/colorRed"/>
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/are_you_sure_you_want_to_cancel_the_order"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/cairo_regular400"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorTextPrimary"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center">
                <Button
                    android:id="@+id/btnYes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/yes"
                    android:elevation="@dimen/_3sdp"
                    android:background="@color/colorRed"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/cairo_semibold600"
                    android:textStyle="bold"
                    android:textSize="@dimen/_9sdp"
                    android:textAllCaps="false"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnNo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/no"
                    android:background="@color/colorBlue"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:fontFamily="@font/cairo_semibold600"
                    android:elevation="@dimen/_3sdp"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_9sdp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>