<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:padding="@dimen/_16sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_4sdp"
        app:contentPadding="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioBtnEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:buttonTint="@color/colorAccent"
                    android:checked="true"
                    android:text="@string/english"
                    android:textColor="@color/colorTextSecondary" />

                <RadioButton
                    android:id="@+id/radioBtnSpanish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/arabic"
                    android:textColor="@color/colorTextSecondary" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:elevation="@dimen/_3sdp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:elevation="@dimen/_3sdp"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>