<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ndroid="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/_16sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cairo_bold700"
                android:gravity="center"
                android:text="@string/report"
                android:textColor="@color/colorOrange"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:id="@+id/edtMessage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_below="@+id/ratingBar"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/btn_rounded_gray"
                android:gravity="start"
                android:hint="@string/tell_us_what_wrong"
                android:maxLines="5"
                android:padding="@dimen/_10sdp" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/cairo_semibold600"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_9sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>