<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/cairo_bold700"
                    android:text="@string/new_account"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_regular400"
                    android:text="@string/enter_your_information_below"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/light_gray" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="0.3"
                android:src="@drawable/logo" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_25sdp"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_name"
                android:drawablePadding="@dimen/_7sdp"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textCursorDrawable="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_25sdp"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_email"
                android:drawablePadding="@dimen/_4sdp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextPrimary"
                android:textCursorDrawable="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:hint="@string/occupation"
            android:orientation="horizontal"
            app:boxStrokeColor="@color/colorAccent"
            app:endIconTint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <AutoCompleteTextView
                android:id="@+id/spinOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_occupation"
                android:drawableLeft="@drawable/icon_occupation"
                android:drawablePadding="@dimen/_2sdp"
                android:inputType="textNoSuggestions"
                android:textCursorDrawable="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:hint="@string/gender"
            android:orientation="horizontal"
            app:boxStrokeColor="@color/colorAccent"
            app:endIconTint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <AutoCompleteTextView
                android:id="@+id/spinGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_gender"
                android:drawableLeft="@drawable/ic_gender"
                android:drawablePadding="@dimen/_9sdp"
                android:inputType="textNoSuggestions"
                android:textCursorDrawable="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:hint="@string/date_of_birth"
            android:orientation="horizontal"
            app:boxStrokeColor="@color/colorAccent"
            app:endIconTint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <AutoCompleteTextView
                android:id="@+id/spinDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_dob"
                android:drawableLeft="@drawable/icon_dob"
                android:drawablePadding="@dimen/_4sdp"
                android:inputType="textNoSuggestions"
                android:textCursorDrawable="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/create"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14sdp" />
</RelativeLayout>